k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: microservice
  name: microservice
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: microservice
    weight: 100
